# flask-blog

./: .coverage  README.md  README_AR.md  hello.py  info  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: index.html  update.html
tests/: conftest.py  test_auth.py  test_blog.py
