[project]
name = "faceblog"
version = "1.0.0"
description = "A Facebook-inspired social blogging application built with Python and Flask."
dependencies = [
    "flask",
    "waitress",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flaskr"  # This explicitly tells flit to bundle the flaskr folder under the name faceblog [3.1.x]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]
